--- a/src/styles.scss
+++ b/src/styles.scss
@@ -18,7 +18,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 }
 
 .grid-container {
-  margin: 20px;
+  // margin: 20px;
 }
 
 .card {
